--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
-version: '3.7'
-
 services:
     app:
-        build: ./
-        command: streamlit run app/main.py --server.port 8501
+        container_name: ${COMPOSE_PROJECT_NAME}_streamlit
+        build:
+            context: .
+            dockerfile: Dockerfile.streamlit
+            args:
+                PYTHON_VERSION: ${PYTHON_VERSION}
+        env_file:
+            - .env
         volumes:
-            - ./:/usr/src/app
+            - ./:/app
+        working_dir: /app
         ports:
-            - 8501:8501
-        image: yourstreamlitapp:latest
+            - "${STREAMLIT_PORT}:5000"
